Set images to cover to avoid stretching on images with incorrect aspect ratios
ready #433

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-article-teaser.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-article-teaser.scss
@@ -211,6 +211,7 @@
 				@include size(100%);
 				position: absolute;
 				transform: none;
+				object-fit: cover;
 			}
 
 			&:after {
